--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>This is a test page!</p>
+<p>This page is currently under construction.</p>
+<p>Our site will be online shortly./p>
 </body>
 </html>
