--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 <p>This page is currently under construction.</p>
-<p>Our site will be online shortly./p>
+<br><br>
+<p>Our site will be online shortly.</p>
 </body>
 </html>
