--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
+<style>
+  p {
+	font-family: Papyrus, fantasy;
+	font-size: 13px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 18.5714px;
+}
+  
+</style>
 <body>
-<p>This page is currently under construction.</p>
-<br><br>
-<p>Our site will be online shortly.</p>
+  <p>This page is currently under construction.</p>
+    <br><br>
+  <p>Our site will be online shortly.</p>
 </body>
 </html>
