--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <style>
-  p {
-	font-family: Papyrus, fantasy;
+p {
+	font-family: Papyrus;
 	font-size: 13px;
 	font-style: normal;
 	font-variant: normal;
