--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
 <style>
+body {
+	background-color: black;
+	text-align: center;
+	margin-top: auto;
+	margin-bottom: auto;
+}
 p {
 	font-family: Papyrus;
+	color: #FDFD67
 	font-size: 13px;
 	font-style: normal;
 	font-variant: normal;
