--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ body {
 p {
 	font-family: Papyrus;
 	color: #FDFD67
-	font-size: 13px;
+	font-size: 16px;
+	font-color: #F72401;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
