--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 body {
 	background-color: black;
 	text-align: center;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 p {
 	font-family: Papyrus;
 	color: #FDFD67
 	font-size: 16px;
-	font-color: #F72401;
+	color: #F72401;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
