--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ padding-right: 150px;
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="C:\Users\Robin\Desktop\Website\images\full1.png">
+		<img id="logo2" src="full1.png">
 	</div>
 
 	<!-- Menu -->
