--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ padding-right: 150px;
 		<p class="content_1" id="page_content">
 		The <text id="font_gold">Belgian</text> <text id="font_red">Buddha</text> foodtruck offers exceptional Indian and Thai cuisine, accompanied by specially imported Belgian beers. Our mission is to provide a quick and healthy option for the busy Genevoise residents who should not have to compromise on taste.
 		
-		<br> <br> <img id="photo_1" src="images/pic1.jpg"/> <br> <br>
+		<br> <br> <img id="photo_1" src="https://raw.githubusercontent.com/BelgianBuddha/BelgianBuddha.github.io/master/pic1.jpg"/> <br> <br>
 		
 		The Belgian Buddha visits 4 locations every week, Wednesday to Friday. 
 		<a id="white_link" href="file:///C:/Documents%20and%20Settings/Toshiba/Desktop/templated-clearfigure/BelgianBuddha_Location.html" rel="nofollow">Find out where the truck will be next!</a>
