--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ Fonts via TEMPLATED and Google
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Chivo:400,900" rel="stylesheet" />
 <!-- Menu styling -->
-<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="BelgianBuddha.github.io/default.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Font styling -->
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="BelgianBuddha.github.io/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <style>
 /* Body background and text alignment */
@@ -158,7 +158,7 @@ padding-right: 150px;
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="https://raw.githubusercontent.com/BelgianBuddha/BelgianBuddha.github.io/master/full1.PNG">
+		<img id="logo2" src="BelgianBuddha.github.io/full1.PNG">
 	</div>
 
 	<!-- Menu -->
@@ -181,7 +181,7 @@ padding-right: 150px;
 		<p class="content_1" id="page_content">
 		The <text id="font_gold">Belgian</text> <text id="font_red">Buddha</text> foodtruck offers exceptional Indian and Thai cuisine, accompanied by specially imported Belgian beers. Our mission is to provide a quick and healthy option for the busy Genevoise residents who should not have to compromise on taste.
 		
-		<br> <br> <img id="photo_1" src="https://raw.githubusercontent.com/BelgianBuddha/BelgianBuddha.github.io/master/pic1.jpg"/> <br> <br>
+		<br> <br> <img id="photo_1" src="BelgianBuddha.github.io/pic1.jpg"/> <br> <br>
 		
 		The Belgian Buddha visits 4 locations every week, Wednesday to Friday. 
 		<a id="white_link" href="file:///C:/Documents%20and%20Settings/Toshiba/Desktop/templated-clearfigure/BelgianBuddha_Location.html" rel="nofollow">Find out where the truck will be next!</a>
