--- a/index_ii.html
+++ b/index_ii.html
@@ -239,7 +239,7 @@ p.papyrus {
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="C:\Users\Robin\Desktop\Website\images\full1.png">
+		<img id="logo2" src="full1.png">
 	</div>
 
 	<!-- Menu -->
