--- a/index_ii.html
+++ b/index_ii.html
@@ -239,7 +239,7 @@ p.papyrus {
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="full1.png">
+		<img id="logo2" src="BelgianBuddha.github.io/full1.PNG">
 	</div>
 
 	<!-- Menu -->
