--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <!--
-
+--------------------------------------
 Belgian Buddha Food-Truck Website
-
+--------------------------------------
 Created and edited by David R. McGhee
-
+--------------------------------------
+--------------------------------------
 Fonts via TEMPLATED and Google
 (http://templated.co)
 -->
 
 <html>
-
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Belgian Buddha</title>
@@ -19,9 +19,9 @@ Fonts via TEMPLATED and Google
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Chivo:400,900" rel="stylesheet" />
 <!-- Menu styling -->
-<link href="BelgianBuddha.github.io/default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="belgianbuddha.github.io/default.css" rel="stylesheet" type="text/css" media="all" />
 <!-- Font styling -->
-<link href="BelgianBuddha.github.io/fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="belgianbuddha.github.io/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
 <style>
 /* Body background and text alignment */
@@ -86,24 +86,11 @@ p.papyrus {
 	font-family: Papyrus;
 	color: #FDFD67
 	font-size: 15px;
-
-body {
-	background-color: black;
-	text-align: center;
-	margin-top: 25px;
-
-}
-p {
-	font-family: Papyrus;
-	color: #FDFD67
-	font-size: 15px;
-	color: #F72401;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
 	line-height: 18.5714px;
 }
-
 [id=menu-wrapper] {
 	background-color: #F72401;
 	margin-left:auto;
@@ -157,7 +144,7 @@ padding-right: 150px;
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="BelgianBuddha.github.io/full1.PNG">
+		<img id="logo2" src="belgianbuddha.github.io/full1.PNG">
 	</div>
 
 	<!-- Menu -->
@@ -180,10 +167,10 @@ padding-right: 150px;
 		<p class="content_1" id="page_content">
 		The <text id="font_gold">Belgian</text> <text id="font_red">Buddha</text> foodtruck offers exceptional Indian and Thai cuisine, accompanied by specially imported Belgian beers. Our mission is to provide a quick and healthy option for the busy Genevoise residents who should not have to compromise on taste.
 		
-		<br> <br> <img id="photo_1" src="BelgianBuddha.github.io/pic1.jpg"/> <br> <br>
+		<br> <br> <img id="photo_1" src="belgianbuddha.github.io/pic1.JPG"/> <br> <br>
 		
 		The Belgian Buddha visits 4 locations every week, Wednesday to Friday. 
-		<a id="white_link" href="file:///C:/Documents%20and%20Settings/Toshiba/Desktop/templated-clearfigure/BelgianBuddha_Location.html" rel="nofollow">Find out where the truck will be next!</a>
+		<a id="white_link" href="#" rel="nofollow">Find out where the truck will be next!</a>
 		</p>
 	</div>
 	
@@ -201,6 +188,5 @@ padding-right: 150px;
 		&copy; All rights reserved  | <a style="color:black;" href="http://templated.co" rel="nofollow" target="_blank">TEMPLATED</a>
 		</p>
 	</div>
-
 </body>
 </html>
