--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ padding-right: 150px;
 <body>
 	<!-- Logo -->
 	<div id="header">
-		<img id="logo2" src="full1.PNG">
+		<img id="logo2" src="BelgianBuddha.github.io/images/full1.PNG">
 	</div>
 
 	<!-- Menu -->
@@ -165,7 +165,7 @@ padding-right: 150px;
 		<p class="content_1" id="page_content">
 		The <text id="font_gold">Belgian</text> <text id="font_red">Buddha</text> foodtruck offers exceptional Indian and Thai cuisine, accompanied by specially imported Belgian beers. Our mission is to provide a quick and healthy option for the busy Genevoise residents who should not have to compromise on taste.
 		
-		<br> <br> <img id="photo_1" src="pic1.JPG"/> <br> <br>
+		<br> <br> <img id="photo_1" src="BelgianBuddha.github.io/images/pic1.JPG"/> <br> <br>
 		
 		The Belgian Buddha visits 4 locations every week, Wednesday to Friday. 
 		<a id="white_link" href="location" rel="nofollow">Find out where the truck will be next!</a>
