--- a/location.html
+++ b/location.html
@@ -245,8 +245,8 @@ p.papyrus {
 	<!-- Menu -->
 	<div id="menu" class="container">
 		<ul id="menu" class="buttons1">
-			<li class="current_page"><a style="color: black;" href="#">Home</a></li>
-			<li><a href="#">Location</a></li>
+			<li><a href="BelgianBuddha.github.io/">Home</a></li>
+			<li class="current_page"><a style="color: black;" href="#">Location</a></li>
 			<li><a href="#" id="button1">Menu</a></li>
 			<li style="padding-left: 50px; padding-right: 50px;" id="button1"></li>
 			<li><a href="#" id="button1">Story</a></li>
