--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ padding-right: 150px;
 	<div id="menu" class="container">
 		<ul id="menu" class="buttons1">
 			<li class="current_page"><a style="color: black;" href="#">Home</a></li>
-			<li><a href="BelgianBuddha.github.io/location.html">Location</a></li>
+			<li><a href="location">Location</a></li>
 			<li><a href="#" id="button1">Menu</a></li>
 			<li style="padding-left: 50px; padding-right: 50px;" id="button1"></li>
 			<li><a href="#" id="button1">Story</a></li>
