--- a/location.html
+++ b/location.html
@@ -274,5 +274,19 @@ p.papyrus {
 		</div>
 	</div>
 	
+	<!-- Footer -->
+	<div id="copyright" style="background-color: #FDFD67;width: 100%;padding-top: 20px;padding-bottom: 5px;">
+			<h2 style="padding-top: 0px;">Follow Us</h2>
+			<ul class="contact" style="padding-top: 15px;">
+				<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/BelgianBuddha" target="_blank" class="icon icon-facebook"><span>Facebook</span></a></li>
+			</ul>
+	<p class="creator_credit" style="color: black; font-size: 10px;"">Created by <a style="color: black;" href="https://www.linkedin.com/in/davidrossmcghee" rel="nofollow" target="_blank">David R. McGhee</a></p>
+	</div>
+	<div style="background-color: black; text-align: right; padding-right: 5px;">
+		<p style="color: black; text-align: right; font-size: 9px;">
+		&copy; All rights reserved  | <a style="color:black;" href="http://templated.co" rel="nofollow" target="_blank">TEMPLATED</a>
+		</p>
+	</div>
 </body>
 </html>
