--- a/index.html
+++ b/index.html
@@ -134,7 +134,22 @@ padding-right: 150px;
 [id=copyright] {
 
 	}
-
+ul.buttons1 li a
+	{
+		color: inherit;
+		font-size: 1.75em;
+		display: inline-block;
+		-moz-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+		-webkit-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+		-o-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+		-ms-transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+		transition: color 0.35s ease-in-out, background-color 0.35s ease-in-out;
+	}
+ul.buttons1 li a:hover
+	{
+		/*253,253,103*/
+		background-color: rgba(0,0,0,0.1);
+	{
 </style>
 
 </head>
